--- a/index.html
+++ b/index.html
@@ -4,45 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sorting visualizations</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: monospace;
-      }
-
-      .sorting-container {
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        margin: 1em 0;
-      }
-
-      #app {
-        text-align: center;
-        font-size: 1.25em;
-        background: #26272d;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        height: 100vh;
-      }
-    </style>
     <div id="app">
+      <div id="options">
+        <div>
+          <div for="speed">speed</div>
+          <!-- default delay of 50ms is set in index.js -->
+          <input id="speed" min="1" max="100" value="50" type="range" />
+        </div>
+
+        <button id="restart">restart</button>
+      </div>
+
       <div>
-        bubble sort
+        <p>bubble sort</p>
         <div id="bubblesort" class="sorting-container"></div>
       </div>
+
       <div>
-        insertion sort
+        <p>insertion sort</p>
         <div id="insertionsort" class="sorting-container"></div>
       </div>
+
       <div>
-        selection sort
+        <p>selection sort</p>
         <div id="selectionsort" class="sorting-container"></div>
       </div>
     </div>
