--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sorting visualizations</title>
     <link rel="stylesheet" href="./index.css" />
+    <script
+      src="https://kit.fontawesome.com/cbff992613.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="app">
@@ -18,19 +22,19 @@
         <button id="restart">restart</button>
       </div>
 
-      <div>
+      <div class="sort-container">
         <p>bubble sort</p>
-        <div id="bubblesort" class="sorting-container"></div>
+        <div id="bubblesort" class="sort"></div>
       </div>
 
-      <div>
+      <div class="sort-container">
         <p>insertion sort</p>
-        <div id="insertionsort" class="sorting-container"></div>
+        <div id="insertionsort" class="sort"></div>
       </div>
 
-      <div>
+      <div class="sort-container">
         <p>selection sort</p>
-        <div id="selectionsort" class="sorting-container"></div>
+        <div id="selectionsort" class="sort"></div>
       </div>
     </div>
     <script src="./index.js"></script>
